--- a/recall.css
+++ b/recall.css
@@ -3,7 +3,7 @@ body{
   /*text-align: center;*/
 }
 .outterContainer{
-  background-image: url(g.JPG);
+  background-image: url('https://images.pexels.com/photos/673648/pexels-photo-673648.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%; /* Set the width to 50% */
@@ -13,7 +13,7 @@ body{
   border-radius: 50px;
 }
 .container{
-  background-image: url(a.JPG);
+  background-image: url('https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
